# richreports-py

./: .pylintrc  LICENSE  README.md  README.rst  pyproject.toml
.github/workflows/: lint-test-cover-docs.yml
docs/: conf.py  toc.rst
docs/_source/: richreports.rst
src/richreports/: __init__.py  richreports.py
